--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,18 +1,127 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-color: #51c4b9;
+    overflow: auto;
+    font-family: "Roboto";
+    overflow-y: auto;
+}
+
 .cards {
     max-width: 1200px;
     margin: 0 auto;
     display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 1.5rem;
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: center;
+    align-items: center;
 }
 
 .card {
-    background-color: #9e52e5;
-    color: white;
-    padding: 1rem;
-    height: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    max-width: 100%;
+    background: linear-gradient(#a253e1, #bd97dc);
+    box-shadow: 0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12);
+    border-radius: 8px;
+}
+
+.content {
+    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    height: 88%;
+    width: 88%;
+    background-color: white;
+    border-radius: 8px;
+}
+
+.content > .top {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 20%;
+    background-color: white;
+
+    p {
+        font-weight: bold;
+        font-size: 12px;
+        margin-right: 10%;
+    }
+}
+
+.content > .middle {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 40%;
+    background: linear-gradient(#96d9b1, #e78cba 75%);
+    padding-left: 15px;
+    padding-right: 15px;
+
+    img {
+        width: 50%;
+        Margin: 6%;
+    }
+
+    div > p:first-child {
+        margin-bottom: 10px;
+        font-size: 15px;
+    }
+
+    div > p:nth-child(2) {
+        margin-top: 5%;
+        margin-bottom: 5%;
+        font-weight: bold;
+        font-weight: lighter;
+        font-size: 15px;
+    }
+
+    div > p:nth-child(3) {
+        margin-top: 5%;
+        margin-bottom: 5%;
+        font-weight: bold;
+        font-weight: lighter;
+        font-size: 15px;
+    }
+
+    div > p:last-child {
+        marin-top: 10px;
+        font-weight: bold;
+        font-size: 1.5rem;
+    }
+}
+
+.content > .bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 30%;
+    padding-left: 30px;
+    padding-right: 30px;
+
+    div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        p:first-child {
+            font-weight: bold;
+        }
+    }
+}
+
+
+@media (min-width: 300px) {
+    .cards {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 @media (min-width: 700px) {
