--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,14 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+
 body {
-    display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #51c4b9;
     overflow: auto;
     font-family: "Roboto";
     overflow-y: auto;
+    width: 100%;
+    margin: 0;
+}
+
+.container{
+    width: 100%;
+    background-color: #51c4b9;
+}
+
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    margin-top:5%;
+    background-color: #cb7cbb;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 25px;
+}
+
+.search form {
+    display: flex;
+    align-items: center;
+}
+
+.search form input[type="text"],
+.search form button {
+    margin-right: 10px;
 }
 
 .cards {
@@ -135,3 +163,6 @@ body {
         grid-template-columns: repeat(3, 1fr);
     }
 }
+
+
+
