--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -17,13 +17,20 @@ body {
     background-color: #51c4b9;
 }
 
+.welcome{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .header {
+    margin-bottom: 3%;
+    margin-left: 2%;
+    margin-right: 2%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    margin-top:5%;
     background-color: #cb7cbb;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 25px;
