--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
+                <div class ="welcome"><h2>Welcome to ProteinNet</h2></div>
                 <div class="header">
                     <div class="search">
                         <form th:action="@{/index/search}" method="get">
@@ -45,7 +46,8 @@
                                     <p th:text="'City: ' + ${user.city}"></p>
                                     <p th:text="'Name: ' + ${user.firstName + ' ' + user.lastName}"></p>
                                 </div>
-                                <img src="https://api.multiavatar.com/Starcrasher.png" />
+                                <img th:src="@{'https://api.multiavatar.com/avatar/' + ${user.firstName + user.city} + '.png'}" />
+
                             </div>
                             <div class="bottom">
                                 <div>
