--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -14,7 +14,8 @@ body {
 
 .container{
     width: 100%;
-    background-color: #51c4b9;
+    background: rgb(73,99,230);
+    background: radial-gradient(circle, rgb(102, 142, 203) 0%, rgb(210, 146, 204) 100%);
 }
 
 .welcome{
@@ -31,7 +32,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: #cb7cbb;
+    background-color: #de864c;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 25px;
 }
@@ -62,7 +63,7 @@ body {
     align-items: center;
     height: auto;
     max-width: 100%;
-    background: linear-gradient(#a253e1, #bd97dc);
+    background: linear-gradient(#3e57d5, #c944a0);
     box-shadow: 0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12);
     border-radius: 8px;
 }
@@ -82,7 +83,7 @@ body {
     justify-content: flex-end;
     align-items: center;
     height: 20%;
-    background-color: white;
+    background-color: #b4e8e1;
 
     p {
         font-weight: bold;
@@ -101,7 +102,7 @@ body {
     padding-right: 15px;
 
     img {
-        width: 50%;
+        width: 40%;
         Margin: 5%;
     }
 
